--- a/style.css
+++ b/style.css
@@ -1,4 +1,924 @@
 * {
-    padding: 0px;
     margin: 0px;
+    padding: 0px;
+}
+
+.top-background {
+    background-image: url(img/top-hero.png);
+    background-size: cover;
+    top:0px;
+    height:600px;
+}
+
+.top {
+    width: 1040px;
+    margin: 0 auto;
+}
+
+img.logo {
+    /* float: left; */
+    width: 185px;
+    margin-right: 100px;
+}
+
+header {
+    padding-top:24px;
+    display: flex;
+    justify-content: space-between;
+}
+
+header ul.menu li {
+    float: left;
+    text-align: center;
+    font-family: Lato, sans-serif
+}
+
+header ul.menu li:not(:first-child) {
+    margin-left: 30px;
+}
+
+.test {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    height: 17px;
+}
+
+a.title1 {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+span.title2 {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+span.title1 {
+    font-weight: bold;
+}
+
+header ul.menu {
+    list-style: none;
+}
+
+.header-right {
+    float: right;
+}
+
+.menu a {
+    text-decoration: none;
+    border-bottom: none;
+    color: black;
+}
+
+a.counseling {
+    font-size: 12px;
+    background-color: orange;
+    line-height: 40px;
+    display: block;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 20px;
+    border-bottom: none;
+    text-decoration: none;
+    transition: all 3.0sec;
+}
+
+a.counseling:hover {
+    opacity: 50%;
+}
+
+.top-logo {
+    height: 35px;
+}
+
+/* .badge-number1 {
+    margin-top: 130px;
+} */
+
+.hero-contents {
+    display: flex;
+}
+
+.top-img {
+    margin-top: 130px;
+    display: inline-block;
+}
+
+.copy {
+    font-size: 20px;
+    line-height: 34px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.orange-string {
+    color:orange;
+}
+
+a.top-counseling {
+    font-size: 16px;
+    background-color: orange;
+    line-height: 60px;
+    width: 300px;
+    display: block;
+    color: white;
+    text-align: center;
+    border-radius: 30px;
+    border-bottom: none;
+    text-decoration: none;
+    transition: all 3.0sec;
+}
+
+a.top-counseling:hover {
+    opacity: 50%;
+}
+
+.note {
+    font-size: 10px;
+    line-height: 15px;
+    color: gray;
+    margin-top: 130px;
+}
+
+span.about-title1 {
+    font-size: 50px;
+    color: white;
+}
+
+span.about-title2 {
+    font-size: 40px;
+    color: 40px;
+}
+
+.about {
+    background-color: orange;
+    color: white;
+}
+
+.about-content {
+    width: 1040px;
+    margin: 0 auto;
+    padding-top: 75px;
+}
+
+.about-link {
+    background-color: white;
+    color: orange;
+    display: block;
+    float: right;
+    text-align: center;
+    text-decoration: none;
+    width: 320px;
+    height: 60px;
+    border-radius: 30px;
+    transition: all 3.0sec;
+}
+
+.about-link:hover {
+    opacity: 50%;
+}
+
+.about-link span.title1 {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.about-link span.title2 {
+    font-size: 14px;
+}
+
+.about-description {
+    width: 550px;
+    float: left;
+    font-size: 14px;
+    line-height: 32px;
+}
+
+.about-text {
+    padding-bottom: 160px;
+}
+
+.feature-contents {
+    width: 1040px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.feature-title {
+    padding-top: 75px;
+    font-size: 46px;
+    font-weight: 700;
+}
+
+.feature-subtitle {
+    margin-top: 10px;
+    margin-bottom: 22px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+}
+
+hr.contents-line {
+    width: 50px;
+    color: orange;
+    background-color: orange;
+    height: 5px;
+    border-style: solid;
+    margin: auto;
+    margin-bottom: 60px;
+}
+
+.reason {
+    background-color: #fcfaf4;
+    padding-bottom: 35px;
+    margin-bottom: 40px;
+    padding-top: 40px;
+}
+
+.reason-no {
+    font-size: 40px;
+    line-height: 60px;
+    color: orange;
+    background-color: #fcfaf4;
+    border-radius: 50%;
+    /* margin-bottom: -50px; */
+    margin: 0 auto -50px auto;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.reason-title {
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.reason-description {
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 500;
+    width: 650px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+.example {
+    width: 960px;
+    height: 390px;
+    background-color: white;
+    margin: 0 auto;
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
+.example-title {
+    padding-top: 30px;
+    margin-bottom: 5px;
+    font-size: 24px;
+    display: inline-block;
+}
+
+.example-icon {
+    display: inline-block;
+    height: 36px;
+}
+
+hr.example-line {
+    width: 200px;
+    color: orange;
+    background-color: orange;
+    height: 2px;
+    border-style: solid;
+    margin: auto;
+    margin-bottom: 15px;
+}
+
+.companies {
+    width: 860px;
+    height: 270px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+}
+
+.company {
+    height: 135px;
+    margin-right: 10px;
+    margin-left: 10px;
+    /* margin-right: 40px; */
+}
+
+.strong {
+    font-size: 30px;
+    line-height: 30px;
+    color: orange;
+}
+
+.graphs {
+    width: 960px;
+    height: 275px;
+    background-color: white;
+    margin: 0 auto;
+}
+
+.graph {
+    height: 190px;
+    width: 190px;
+    margin: 40px 60px;
+
+}
+
+.engineers {
+    display: flex;
+    justify-content: center;
+    padding: 0 40px 0;
+}
+
+.engineer {
+    background-color: white;
+    padding: 35px 0 20px;
+    /* display: inline-block; */
+    margin: 0 auto;
+    width: 300px;
+}
+
+.company-logo-box {
+    height: 100px;
+}
+
+.company-logo {
+    margin-bottom: 15px;
+    width: 200px;
+    align-items: center;
+    justify-content: center;
+}
+
+.engineer-outline {
+    display: inline-block;
+}
+
+.company-name {
+    font-size: 14px;
+    line-height: 21px;
+    color: orange;
+}
+
+.engineer-name {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.engineer-description {
+    width: 214px;
+    padding: 20px;
+    font-size: 14px;
+    line-height: 21px;
+    margin: 0 auto;
+    background-color: #f6f6f6;
+}
+
+.course {
+    margin-top: 40px;
+    background-color: #F6F6F6;
+}
+
+.course-contents {
+    width: 1040px;
+    margin: 0 auto;
+    padding-bottom: 80px;
+}
+
+.course-title {
+    font-size: 46px;
+    text-align: center;
+    margin-bottom: 12px;
+    padding-top: 75px;
+    font-weight: bold;
+}
+
+.course-subtitle {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.course-link {
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+    background-color: white;
+    padding:30px;
+    margin-bottom: 40px;
+}
+
+.course-name {
+    color: black;
+    font-weight: bold;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    border: medium solid orange;
+    /* padding: 25px; */
+    width: 290px;
+    height: 100px;
+    margin-left: -50px;
+}
+
+.link-text {
+    /* float: right; */
+    font-size: 12px;
+    line-height: 18px;
+    vertical-align: bottom;
+    padding-top: 90px;
+}
+
+.link-text::after {
+    content: '';
+    display: inline-block;
+    /* position: absolute; */
+    width: 10px;
+    height: 10px;
+    /* bottom: 4px;
+    right: -18px; */
+    border-right: solid 3px #f79214;
+    border-top: solid 3px #f79214;
+    transform: rotate(45deg);
+}
+
+.course-outline1 {
+    font-size: 16px;
+    line-height: 16px;
+    color: #f79314;
+}
+
+.course-outline2 {
+    font-size: 16px;
+    line-height: 16px;
+    color: #f75307;
+}
+
+.condition {
+    margin-top: 18px;
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 21px;
+    color: white;
+    background-color: black;
+    width: 95px;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.condition-dot {
+    color: orange;
+}
+
+.condition-description {
+    font-size: 14px;
+    color: black;
+    font-weight: bold;
+}
+
+.course-fee-link {
+    background-color: orange;
+    color: white;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 300px;
+    height: 60px;
+    border-radius: 30px;
+    transition: all 1.0s;
+    margin: 0 auto;
+}
+
+.course-fee-link:hover {
+    opacity: 50%;
+}
+
+.course-fee-link span.title1 {
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.course-fee-link span.title2 {
+    font-size: 14px;
+}
+
+.thoughts {
+    background-color: #FCFAF5;
+    padding-bottom: 80px;
+}
+
+.thoughts-contents {
+    width: 1040px;
+    margin: 0 auto;
+}
+
+.thoughts-title {
+    font-size: 46px;
+    text-align: center;
+    padding-top: 75px;
+    margin-bottom: 12px;
+    font-weight: bold;
+}
+
+.thoughts-subtitle {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.message-area {
+    /* width: 770px;
+    height: 415px;
+    padding: 40px 150px 40px 40px; */
+    display: flex;
+}
+
+.message-title {
+    margin-top: 55px;
+    font-size: 50px;
+    line-height: 50px;
+    color: orange;
+    margin-bottom: 15px;
+}
+
+.message-text {
+    padding: 40px 150px 40px 40px;
+    width: 550px;
+    font-size: 14px;
+    line-height: 28px;
+    font-weight: 500;
+    background-color: white;
+}
+
+.message-thumbnail {
+    z-index: 2;
+    width: 400px;
+    height: 240px;
+    padding-top: 85px;
+    margin-left: -100px;
+}
+
+.voice-contents {
+    width: 1040px;
+    margin: 0 auto;
+    padding-bottom: 80px;
+}
+
+.voice-title {
+    font-size: 46px;
+    text-align: center;
+    padding-top: 75px;
+    margin-bottom: 12px;
+}
+
+.voice-subtitle {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.students {
+    overflow: hidden;
+}
+
+.student {
+    display: block;
+    /* width: 320px; */
+    width: 33%;
+    text-decoration: none;
+    float: left;
+    /* margin-right: 40px; */
+}
+
+
+
+.student-img {
+    height: 320px;
+    width: 320px;
+}
+
+.student-area {
+    height: 320px;
+    width: 320px;
+    position: relative;
+}
+
+.img-cover {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 50%;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0, 0, 0, 1));
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0, 0, 0, 1));
+    background: linear-gradient(to bottom,  rgba(0,0,0,0), rgba(0, 0, 0, 1));
+}
+
+.img-cover-text {
+    position: absolute;
+    bottom: 0px;
+}
+
+.student-course {
+    color: orange;
+    border-bottom: 1px solid white;
+    padding: 5px 20px;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+
+.student-name {
+    float: left;
+    color: white;
+    margin-left: 20px;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.san {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.former-job {
+    margin-left: 15px;
+    color: white;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.student-description {
+    margin-top: 15px;
+    width: 320px;
+    font-size: 15px;
+    line-height: 27px;
+    color: black;
+    transition: all 300ms;
+}
+
+.student-description:hover {
+    color: orange;
+}
+
+.voice-link {
+    background-color: orange;
+    color: white;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 300px;
+    height: 60px;
+    border-radius: 30px;
+    transition: all 1.0s;
+    margin: 0 auto;
+    clear: both;
+    margin-top: 60px;
+}
+
+.voice-link:hover {
+    opacity: 50%;
+}
+
+a.voice-link .title1 {
+    font-size: 20px;
+    line-height: 30px;
+    padding-top: 5px;
+}
+
+a.voice-link .title2 {
+    font-size: 14px;
+    padding-bottom: 5px;
+}
+
+.service {
+    background-color: #f6f6f6;
+}
+
+.service-content {
+    width: 1040px;
+    margin: 0 auto;
+    padding-bottom: 80px;
+}
+
+.service-title {
+    font-size: 46px;
+    text-align: center;
+    padding-top: 75px;
+    margin-bottom: 12px;
+}
+
+.service-subtitle {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.site-icon {
+    height: 190px;
+    width: 320px;
+    border-radius: 5px;
+    background-color: white;
+    position: relative;
+}
+
+.orange-box {
+    border: 2px solid orange;
+}
+
+.green-box {
+    border: 2px solid green;
+}
+
+.black-box {
+    border: 2px solid black;
+}
+
+.site-icon-img {
+    width: 90%;
+    position: absolute;
+    top: 50px;
+    left: 15px;
+    transition: all 0.3s;
+}
+
+.site-description {
+    margin-top: 20px;
+    font-size: 16px;
+    line-height: 29px;
+    width: 320px;
+    color: black;
+    transition: all 0.3s;
+}
+/* 
+.site-description:hover {
+    color: orange;
+} */
+
+.services {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+
+.service-list {
+    padding: 0px 10px;
+    margin: 0px 10px;
+}
+
+.service-link {
+    text-decoration: none;
+    transition: all 1s;
+    vertical-align: top;
+    /* display: inline-block;
+    text-align: center; */
+    /* float: left; */
+}
+
+.service-link:hover .site-icon-img {
+    width: 95%;
+    top: 45px;
+    left: 10px;
+}
+
+.service-link:hover .site-description {
+    color: orange;
+}
+
+footer {
+    background-color: orange;
+    color: white;
+    height: 495px;
+}
+
+.footer-content {
+    width: 1040px;
+    margin: auto;
+    padding-top: 80px;
+    position: relative;
+}
+
+.footer-logo {
+    width: 280px;
+    margin-bottom: 25px;
+}
+
+.footer-company-name {
+    margin-bottom: 12px;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.adress {
+    margin-bottom: 35px;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.facebook-logo {
+    margin-right: 22px;
+    height: 60px;
+    width: 60px;
+}
+
+.twitter-logo {
+    height: 60px;
+    width: 60px;
+}
+
+.copy-right {
+    margin-top: 100px;
+    font-size: 12px;
+}
+
+.footer-link {
+    list-style: none;
+    margin-left: 228px;
+    color: white;
+    margin-bottom: 30px;
+    font-size: 16px;
+}
+
+.footer-link-about {
+    text-decoration: none;
+    color: white;
+}
+
+.footer-link-flow {
+    text-decoration: none;
+    color: white;
+}
+
+.footer-link-course {
+    text-decoration: none;
+    color: white;
+}
+
+.footer-link-interview {
+    text-decoration: none;
+    color: white;
+}
+
+.footer-link-faq {
+    text-decoration: none;
+    color: white;
+}
+
+.footer-link-company {
+    text-decoration: none;
+    color: white;
+}
+
+.page-top-button {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -25px;
+    right: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0 12px 30px -15px;
+    transition: 0.2s;
+}
+
+.page-top-arrow {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-left: solid 3px #f79214;
+    border-top: solid 3px #f79214;
+    transform: rotate(45deg);
+    text-decoration: none;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    position: absolute;
+    top: 20px;
+    left: 18px;
+}
+
+.footer-potepanda {
+    float: right;
+    width: 120px;
+    height: 70px;
+    margin-top: 225px;
+    margin-left: 224px;
+}
+
+.footer-content {
+    display: flex;
 }
